--- a/2.md
+++ b/2.md
@@ -149,75 +149,85 @@ A questo punto, ci si trova nell'**Area di lavoro personale**. Per lavorare con 
     
     a.	**Database KQL:** consente di caricare rapidamente dati strutturati, non strutturati e in streaming per l'esecuzione di query.
     
-    b.	Set di query KQL: consente di eseguire query sui dati per produrre tabelle e oggetti visivi condivisibili.
+    b.	**Set di query KQL:** consente di eseguire query sui dati per produrre tabelle e oggetti visivi condivisibili.
     
-    c.	Eventstream: consente di acquisire, trasformare e instradare il flusso di eventi in tempo reale.
+    c.	**Eventstream:** consente di acquisire, trasformare e instradare il flusso di eventi in tempo reale.
     
-    d.	Usare un esempio: consente di creare un esempio.
+    d.	**Usare un esempio:** consente di creare un esempio.
  
 
-Area di lavoro di Fabric
-Attività 8 - Creazione di un'area di lavoro di Fabric
-1. 	Ora creeremo un'area di lavoro con la licenza di Fabric. Selezionare Aree di lavoro nella barra di spostamento a sinistra. Si apre una finestra di dialogo.
-2. 	Selezionare Nuova area di lavoro.
- 
-3. 	Si apre la finestra di dialogo Crea un'area di lavoro sul lato destro del browser.
-4. 	Nel campo Nome immettere FAIAD_<nomeutente>
+# Area di lavoro di Fabric
 
-Nota: il nome dell'area di lavoro deve essere univoco. In questo documento useremo FAIAD come nome dell'area di lavoro. Tuttavia, il nome dell'area di lavoro usato deve essere diverso. Assicurarsi che sotto il campo Nome sia presente un segno di spunta verde e che sia indicato "Questo nome è disponibile".
-
-5. 	Se lo si desidera, è possibile immettere una Descrizione per l'area di lavoro. Questo campo è facoltativo.
-6. 	Fare clic su Avanzate per espandere la sezione.
+## Attività 8 - Creazione di un'area di lavoro di Fabric
+1. Ora creeremo un'area di lavoro con la licenza di Fabric. Selezionare **Aree di lavoro** nella barra di spostamento a sinistra. Si apre una finestra di dialogo.
+2. Selezionare **Nuova area di lavoro**.
  
-7. 	In Modalità licenza assicurarsi che si sia selezionato Versione di prova (deve essere selezionato per impostazione predefinita).
-8. 	Selezionare Applica per creare una nuova area di lavoro.
+3.	Si apre la finestra di dialogo **Crea un'area di lavoro** sul lato destro del browser.
+4. Nel campo **Nome** immettere **FAIAD_<nomeutente>**
+
+**Nota:** il nome dell'area di lavoro deve essere univoco. In questo documento useremo FAIAD come nome dell'area di lavoro. Tuttavia, il nome dell'area di lavoro usato deve essere diverso. Assicurarsi che sotto il campo Nome sia presente un segno di spunta verde e che sia indicato "**Questo nome è disponibile**".
+
+5. Se lo si desidera, è possibile immettere una **Descrizione** per l'area di lavoro. Questo campo è facoltativo.
+6. Fare clic su **Avanzate** per espandere la sezione.
+ 
+7. In **Modalità licenza** assicurarsi che si sia selezionato **Versione di prova** (deve essere selezionato per impostazione predefinita).
+8. Selezionare **Applica** per creare una nuova area di lavoro.
  
 Viene creata una nuova area di lavoro e si passa a tale area di lavoro. Importeremo dati da diverse origini dati in Lakehouse e li useremo da Lakehouse per creare il modello e il report relativi. Il primo passaggio consiste nel creare un lakehouse.
 
-Attività 9 - Creazione di un lakehouse
-1. 	Selezionare Real-Time Analytics nella parte inferiore sinistra della schermata. Si apre la finestra di dialogo delle esperienze in Fabric.
-2. 	Selezionare Data Engineering per andare alla home page di Data Engineering.
+## Attività 9 - Creazione di un lakehouse
+1. Selezionare **Real-Time Analytics** nella parte inferiore sinistra della schermata. Si apre la finestra di dialogo delle esperienze in Fabric.
+
+2. Selezionare **Data Engineering** per andare alla home page di Data Engineering.
  
-3. 	Selezionare Lakehouse.
+3. Selezionare **Lakehouse**.
   
-4. 	Si apre la finestra di dialogo Nuovo lakehouse. Digitare lh_FAIAD nella casella di testo Nome. 
-Nota: lh indica Lakehouse. Aggiungiamo il prefisso lh per agevolarne l'identificazione e la ricerca.
-5. 	Selezionare Crea.
+4. Si apre la finestra di dialogo Nuovo lakehouse. Digitare **lh_FAIAD** nella casella di testo Nome.
+
+**Nota:** lh indica Lakehouse. Aggiungiamo il prefisso lh per agevolarne l'identificazione e la ricerca.
+
+5. Selezionare **Crea**.
  
 Dopo qualche istante viene creato un lakehouse e si passerà all'interfaccia di Lakehouse.
-Nel pannello sinistro notare che sotto all'area di lavoro è ancora presente l'icona di Lakehouse. È possibile passare agevolmente a Lakehouse facendo clic su questa icona in qualsiasi momento.
+Nel **pannello sinistro** notare che sotto all'area di lavoro è ancora presente l'icona di Lakehouse. È possibile passare agevolmente a Lakehouse facendo clic su questa icona in qualsiasi momento.
 
-Nell'interfaccia di esplorazione di Lakehouse si noteranno Tabelle e File. Lakehouse può esporre file di Azure Data Lake Storage Gen2 nella sezione file oppure un flusso di dati può caricare dati nelle tabelle di Lakehouse. Sono disponibili varie opzioni. Mostreremo alcune di queste opzioni nei lab seguenti.
+Nell'interfaccia di esplorazione di Lakehouse si noteranno **Tabelle** e **File**. Lakehouse può esporre file di Azure Data Lake Storage Gen2 nella sezione file oppure un flusso di dati può caricare dati nelle tabelle di Lakehouse. Sono disponibili varie opzioni. Mostreremo alcune di queste opzioni nei lab seguenti.
  
 In questo lab abbiamo esplorato l'interfaccia di Fabric, creato uno spazio di lavoro di Fabric e un lakehouse. Nel prossimo lab si imparerà a usare Flusso di dati Gen2 per connettersi ad ADLS Gen2 per estrarre, trasformare e inserire dati nel lakehouse.
 
-Riferimenti
+# Riferimenti
 Fabric Analyst in a Day (FAIAD) presenta alcune delle funzionalità chiave disponibili in Microsoft Fabric. Nel menu di servizio, la sezione Guida (?) include collegamenti ad alcune risorse utili.
  
 
 Di seguito sono riportate ulteriori risorse utili che consentiranno di progredire nell'uso di Microsoft Fabric.
-•	Vedere il post di blog per leggere l'annuncio completo sulla disponibilità generale di Microsoft Fabric
-•	Esplorare Fabric attraverso la Presentazione guidata
-•	Iscriversi alla versione di valutazione gratuita di Microsoft Fabric
-•	Visitare il sito Web di Microsoft Fabric
-•	Acquisire nuove competenze esplorando i moduli di apprendimento su Fabric
-•	Consultare la documentazione tecnica di Fabric
-•	Leggere l'e-book gratuito introduttivo a Fabric
-•	Unirsi alla community di Fabric per pubblicare domande, condividere feedback e imparare dagli altri
+
+- Vedere il post di blog per leggere l'annuncio completo sulla disponibilità generale di Microsoft Fabric
+
+- Esplorare Fabric attraverso la Presentazione guidata
+- Iscriversi alla versione di valutazione gratuita di Microsoft Fabric
+- Visitare il sito Web di Microsoft Fabric
+- Acquisire nuove competenze esplorando i moduli di apprendimento su Fabric
+- Consultare la documentazione tecnica di Fabric
+- Leggere l'e-book gratuito introduttivo a Fabric
+- Unirsi alla community di Fabric per pubblicare domande, condividere feedback e imparare dagli altri
+
 Leggere i blog di annunci più approfonditi sull'esperienza in Fabric:
-•	Blog sull'esperienza Data Factory in Fabric 
-•	Blog sull'esperienza Synapse Data Engineering in Fabric 
-•	Blog sull'esperienza Synapse Data Science in Fabric 
-•	Blog sull'esperienza Synapse Data Warehousing in Fabric 
-•	Blog sull'esperienza Synapse Real-Time Analytics in Fabric
-•	Blog di annunci di Power BI
-•	Blog sull'esperienza Data Activator in Fabric 
-•	Blog su amministrazione e governance in Fabric
-•	Blog su OneLake in Fabric
-•	Blog sull'integrazione di Dataverse e Microsoft Fabric
+
+- Blog sull'esperienza Data Factory in Fabric 
+- Blog sull'esperienza Synapse Data Engineering in Fabric 
+- Blog sull'esperienza Synapse Data Science in Fabric 
+- Blog sull'esperienza Synapse Data Warehousing in Fabric 
+- Blog sull'esperienza Synapse Real-Time Analytics in Fabric
+- Blog di annunci di Power BI
+- Blog sull'esperienza Data Activator in Fabric 
+- Blog su amministrazione e governance in Fabric
+- Blog su OneLake in Fabric
+- Blog sull'integrazione di Dataverse e Microsoft Fabric
 
 © 2023 Microsoft Corporation. Tutti i diritti sono riservati.
+
 L'uso della demo/del lab implica l'accettazione delle seguenti condizioni:
+
 La tecnologia/le funzionalità descritte nella demo/nel lab sono fornite da Microsoft Corporation allo scopo di ottenere feedback dall'utente e offrire un'esperienza di apprendimento. L'utilizzo della demo/del lab è consentito solo per la valutazione delle caratteristiche e delle funzionalità di tale tecnologia e per l'invio di feedback a Microsoft. L'utilizzo per qualsiasi altro scopo non è consentito. È vietato modificare, copiare, distribuire, trasmettere, visualizzare, eseguire, riprodurre, pubblicare, concedere in licenza, usare per la creazione di lavori derivati, trasferire o vendere questa demo/questo lab o parte di essi.
 SONO ESPLICITAMENTE PROIBITE LA COPIA E LA RIPRODUZIONE DELLA DEMO/DEL LAB (O DI QUALSIASI PARTE DI ESSI) IN QUALSIASI ALTRO SERVER O IN QUALSIASI ALTRA POSIZIONE PER ULTERIORE RIPRODUZIONE O RIDISTRIBUZIONE.
 QUESTA DEMO/QUESTO LAB RENDONO DISPONIBILI TECNOLOGIE SOFTWARE/FUNZIONALITÀ DI PRODOTTO SPECIFICHE, INCLUSI NUOVI CONCETTI E NUOVE FUNZIONALITÀ POTENZIALI, IN UN AMBIENTE SIMULATO, CON UN'INSTALLAZIONE E UNA CONFIGURAZIONE PRIVE DI COMPLESSITÀ, PER GLI SCOPI DESCRITTI IN PRECEDENZA. LA TECNOLOGIA/I CONCETTI RAPPRESENTATI IN QUESTA DEMO/IN QUESTO LAB POTREBBERO NON CONTENERE LE FUNZIONALITÀ COMPLETE E IL LORO FUNZIONAMENTO POTREBBE NON ESSERE LO STESSO DELLA VERSIONE FINALE. È ANCHE POSSIBILE CHE UNA VERSIONE FINALE DI TALI FUNZIONALITÀ O CONCETTI NON VENGA RILASCIATA. L'ESPERIENZA D'USO DI TALI CARATTERISTICHE E FUNZIONALITÀ PUÒ INOLTRE RISULTARE DIVERSA IN UN AMBIENTE FISICO.
